# vala

./: meson.build
ccode/: meson.build
codegen/: meson.build
compiler/: meson.build
gee/: meson.build
gobject-introspection/: meson.build
tests/: Makefile.am
tests/objects/: bug615830.test
vala/: meson.build  valadatatype.vala  valasemanticanalyzer.vala
vapi/: gtk+-3.0.vapi
vapigen/: meson.build
